Updated output to html

--- a/test4.html
+++ b/test4.html
@@ -8,6 +8,27 @@ table, th, td {
 }
 </style>
 <body>
+
+<h1>Urenverantwoording</h1>
+
+<table style="width:100%">
+    <tr>
+        <th>BPV week: 1</th>
+    </tr>
+    <tr>
+        <th>Naam student</th>
+        <th>naam</th>
+        <th>BPV-docent</th>
+        <th>Dhr. van't Hof</th>
+    </tr>
+    <tr>
+        <th>BPV-bedrijf</th>
+        <th>Media Artists</th>
+        <th>Praktijkopleider</th>
+        <th>Dhr. Gijsbertsen</th>
+    </tr>
+</table>
+
 <table style="width:100%">
 <tr>
     <th>Week</th>
@@ -18,46 +39,19 @@ table, th, td {
 </tr>
 
 <tr> 
- <td>sdfdsdf</td>
-    <td>sdfds</td>
-    <td>sdf</td>
-    <td>afdasdsd</td>
-</tr>
- 
-<tr> 
- <td>sddffds</td>
-    <td>dsdfs</td>
-    <td>ssdfdsfdsfdsffdsdsf</td>
-    <td>sdfdsfdsafjsklfjdslkfjlkejikrfuewifjewiufvudsifnvskvneiv[w</td>
-</tr>
-
-<tr> 
-  <td>08-02-2017</td>
- <td>8</td>
- <td>6</td>
- <td>Maken van een webapp</td>
- </tr>
-
-<tr> 
-  <td>2017-02-08</td>
- <td>8</td>
- <td>6</td>
- <td>Maken van een app</td>
- </tr>
-
-<tr> 
-  <td>2017-02-08</td>
- <td>8</td>
- <td>6</td>
- <td>Maken van een app JONGE</td>
- </tr>
-
-<tr> 
-  <td>20</td>
+  <td>0</td>
  <td>2017-02-08</td>
  <td>8</td>
- <td>6</td>
- <td>Maken van een webapp!</td>
+ <td>8</td>
+ <td>Maken van een webapp voor walter</td>
+ </tr>
+ 
+<tr> 
+  <td>0</td>
+ <td>2017-02-08</td>
+ <td>8</td>
+ <td>8</td>
+ <td>Maken van een webapp voor walter</td>
  </tr>
 
 <tr> 
@@ -67,3 +61,36 @@ table, th, td {
  <td>8</td>
  <td>Maken van een webapp voor walter</td>
  </tr>
+
+<tr> 
+  <td>0</td>
+ <td>2017-02-08</td>
+ <td>8</td>
+ <td>8</td>
+ <td>Maken van een webapp voor walter</td>
+ </tr>
+
+<tr> 
+  <td>0</td>
+ <td>2017-02-08</td>
+ <td>8</td>
+ <td>8</td>
+ <td>Maken van een webapp voor walter</td>
+ </tr>
+
+<tr> 
+  <td>0</td>
+ <td>2017-02-08</td>
+ <td>8</td>
+ <td>8</td>
+ <td>Maken van een webapp voor walter</td>
+ </tr>
+
+<tr> 
+  <td>0</td>
+ <td>2017-02-08</td>
+ <td>8</td>
+ <td>8</td>
+ <td>Maken van een webapp voor walter</td>
+ </tr>
+</table>
