--- a/test4.html
+++ b/test4.html
@@ -5,6 +5,7 @@
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
+    font-family: Arial;
 }
 </style>
 <body>
@@ -12,25 +13,28 @@ table, th, td {
 <h1>Urenverantwoording</h1>
 
 <table style="width:100%">
-    <tr>
+    <tr style="background-color: lightblue;">
         <th>BPV week: 1</th>
-    </tr>
-    <tr>
-        <th>Naam student</th>
-        <th>naam</th>
-        <th>BPV-docent</th>
-        <th>Dhr. van't Hof</th>
-    </tr>
-    <tr>
-        <th>BPV-bedrijf</th>
-        <th>Media Artists</th>
-        <th>Praktijkopleider</th>
-        <th>Dhr. Gijsbertsen</th>
     </tr>
 </table>
 
 <table style="width:100%">
-<tr>
+    <tr>
+        <th>Naam student:</th>
+        <td>Ard-Jan Aalberts</td>
+        <th>BPV-docent:</th>
+        <td>Dhr. van't Hof</td>
+    </tr>
+    <tr>
+        <th>BPV-bedrijf:</th>
+        <td>Media Artists</td>
+        <th>Praktijkopleider:</th>
+        <td>Dhr. Gijsbertsen</td>
+    </tr>
+</table>
+
+<table style="width:100%">
+<tr style="background-color: lightblue;">
     <th>Week</th>
     <th>Dag / datum</th>
     <th>Gewerkte uren</th>
