renamed test.py to input.py, test4.html to output.html

--- a/output.html
+++ b/output.html
@@ -13,12 +13,6 @@ table, th, td {
 <h1>Urenverantwoording</h1>
 
 <table style="width:100%">
-    <tr style="background-color: lightblue;">
-        <th>BPV week: 1</th>
-    </tr>
-</table>
-
-<table style="width:100%">
     <tr>
         <th>Naam student:</th>
         <td>Ard-Jan Aalberts</td>
@@ -36,7 +30,7 @@ table, th, td {
 <table style="width:100%">
 <tr style="background-color: lightblue;">
     <th>Week</th>
-    <th>Dag / datum</th>
+    <th>Datum</th>
     <th>Gewerkte uren</th>
     <th>Gewerkte PvB uren</th>
     <th>Werkzaamheden</th>
@@ -97,4 +91,10 @@ table, th, td {
  <td>8</td>
  <td>Maken van een webapp voor walter</td>
  </tr>
-</table>
+<tr> 
+  <td>1</td>
+ <td>2017-02-08</td>
+ <td>8</td>
+ <td>8</td>
+ <td>maken van deze app</td>
+ </tr>
