--- a/output.html
+++ b/output.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-    font-family: Arial;
-}
-</style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 <body>
 
-<h1>Urenverantwoording</h1>
+<h1 class="title">Urenverantwoording</h1>
 
-<table style="width:100%">
+<table>
     <tr>
         <th>Naam student:</th>
         <td>Ard-Jan Aalberts</td>
@@ -27,8 +22,8 @@ table, th, td {
     </tr>
 </table>
 
-<table style="width:100%">
-<tr style="background-color: lightblue;">
+<table>
+<tr class="heading">
     <th>Week</th>
     <th>Datum</th>
     <th>Gewerkte uren</th>
