Editted for html file

--- a/output.html
+++ b/output.html
@@ -7,10 +7,19 @@ table, th, td {
     border-collapse: collapse;
     font-family: Arial;
 }
+    th {
+    background-color: #C0C0C0;
+    }
 </style>
 <body>
 
 <h1>Urenverantwoording</h1>
+
+<table style="width:100%">
+    <tr style="">
+        <th>BPV week: 1</th>
+    </tr>
+</table>
 
 <table style="width:100%">
     <tr>
@@ -28,73 +37,19 @@ table, th, td {
 </table>
 
 <table style="width:100%">
-<tr style="background-color: lightblue;">
+<tr>
     <th>Week</th>
-    <th>Datum</th>
+    <th>Dag / datum</th>
     <th>Gewerkte uren</th>
     <th>Gewerkte PvB uren</th>
     <th>Werkzaamheden</th>
 </tr>
 
-<tr> 
-  <td>0</td>
- <td>2017-02-08</td>
- <td>8</td>
- <td>8</td>
- <td>Maken van een webapp voor walter</td>
- </tr>
- 
-<tr> 
-  <td>0</td>
- <td>2017-02-08</td>
- <td>8</td>
- <td>8</td>
- <td>Maken van een webapp voor walter</td>
- </tr>
 
-<tr> 
-  <td>0</td>
- <td>2017-02-08</td>
- <td>8</td>
- <td>8</td>
- <td>Maken van een webapp voor walter</td>
- </tr>
-
-<tr> 
-  <td>0</td>
- <td>2017-02-08</td>
- <td>8</td>
- <td>8</td>
- <td>Maken van een webapp voor walter</td>
- </tr>
-
-<tr> 
-  <td>0</td>
- <td>2017-02-08</td>
- <td>8</td>
- <td>8</td>
- <td>Maken van een webapp voor walter</td>
- </tr>
-
-<tr> 
-  <td>0</td>
- <td>2017-02-08</td>
- <td>8</td>
- <td>8</td>
- <td>Maken van een webapp voor walter</td>
- </tr>
-
-<tr> 
-  <td>0</td>
- <td>2017-02-08</td>
- <td>8</td>
- <td>8</td>
- <td>Maken van een webapp voor walter</td>
- </tr>
 <tr> 
   <td>1</td>
  <td>2017-02-08</td>
  <td>8</td>
  <td>8</td>
- <td>maken van deze app</td>
+ <td>App testen</td>
  </tr>
