--- a/output.html
+++ b/output.html
@@ -1,27 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-    font-family: Arial;
-}
-    th {
-    background-color: #C0C0C0;
-    }
-</style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 <body>
 
-<h1>Urenverantwoording</h1>
+<h1 class="title">Urenverantwoording</h1>
 
-<table style="width:100%">
-    <tr style="">
-        <th>BPV week: 1</th>
-    </tr>
-</table>
-
-<table style="width:100%">
+<table>
     <tr>
         <th>Naam student:</th>
         <td>Ard-Jan Aalberts</td>
@@ -36,8 +21,8 @@ table, th, td {
     </tr>
 </table>
 
-<table style="width:100%">
-<tr>
+<table>
+<tr class="heading">
     <th>Week</th>
     <th>Dag / datum</th>
     <th>Gewerkte uren</th>
