--- a/output.html
+++ b/output.html
@@ -1,27 +1,35 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Admin</title>
+    <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="./bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+</head>
 <body>
 
-<h1 class="title">Urenverantwoording</h1>
+<div class="col-md-10 col-md-offset-1">
 
-<table>
+<h1 class="page-header">Urenverantwoording</h1>
+
+<table class="table table-bordered">
     <tr>
-        <th>Naam student:</th>
+        <th class="tablehead">Naam student:</th>
         <td>Ard-Jan Aalberts</td>
-        <th>BPV-docent:</th>
+        <th class="tablehead">BPV-docent:</th>
         <td>Dhr. van't Hof</td>
     </tr>
     <tr>
-        <th>BPV-bedrijf:</th>
+        <th class="tablehead">BPV-bedrijf:</th>
         <td>Media Artists</td>
-        <th>Praktijkopleider:</th>
+        <th class="tablehead">Praktijkopleider:</th>
         <td>Dhr. Gijsbertsen</td>
     </tr>
 </table>
 
-<table>
+<table class="table table-bordered" style="margin-top: -21px;">
 <tr class="heading">
     <th>Week</th>
     <th>Dag / datum</th>
