changed some css and table borders

--- a/output.html
+++ b/output.html
@@ -29,7 +29,7 @@
     </tr>
 </table>
 
-<table class="table table-bordered" style="margin-top: -21px;">
+<table class="table table-bordered">
 <tr class="heading">
     <th>Week</th>
     <th>Dag / datum</th>
@@ -37,3 +37,45 @@
     <th>Gewerkte PvB uren</th>
     <th>Werkzaamheden</th>
 </tr>
+
+<tr> 
+  <td>1</td>
+ <td>2017-02-09</td>
+ <td>8</td>
+ <td>2</td>
+ <td>esrgsr</td>
+ </tr>
+
+<tr> 
+  <td>1</td>
+ <td>2017-02-09</td>
+ <td>8</td>
+ <td>2</td>
+ <td>wrfwerfwergfwgwht</td>
+ </tr>
+
+<tr> 
+  <td>1</td>
+ <td>2017-02-09</td>
+ <td>8</td>
+ <td>2</td>
+ <td>dsfsdf</td>
+ </tr>
+
+<tr> 
+  <td>1</td>
+ <td>2017-02-09</td>
+ <td>8</td>
+ <td>2</td>
+ <td>sdvsdvsdv</td>
+ </tr>
+
+<tr> 
+  <td>1</td>
+ <td>2017-02-09</td>
+ <td>8</td>
+ <td>2</td>
+ <td>sdfgsdfgsdfg</td>
+ </tr>
+
+</table><table><tr class="table-bordered"><th class="heading">Totaal aantal gewerkte uren: 0 </th></tr></table>
