edited table margin.

--- a/output.html
+++ b/output.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Admin</title>
+    <title>Urenverantwoording</title>
     <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="./bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -17,7 +17,7 @@
 <table class="table table-bordered">
     <tr>
         <th class="tablehead">Naam student:</th>
-        <td>Ard-Jan Aalberts</td>
+        <td>Evert Arends</td>
         <th class="tablehead">BPV-docent:</th>
         <td>Dhr. van't Hof</td>
     </tr>
@@ -29,7 +29,7 @@
     </tr>
 </table>
 
-<table class="table table-bordered">
+<table class="table table-bordered" style="margin-top: -21px;">
 <tr class="heading">
     <th>Week</th>
     <th>Dag / datum</th>
@@ -37,45 +37,3 @@
     <th>Gewerkte PvB uren</th>
     <th>Werkzaamheden</th>
 </tr>
-
-<tr> 
-  <td>1</td>
- <td>2017-02-09</td>
- <td>8</td>
- <td>2</td>
- <td>esrgsr</td>
- </tr>
-
-<tr> 
-  <td>1</td>
- <td>2017-02-09</td>
- <td>8</td>
- <td>2</td>
- <td>wrfwerfwergfwgwht</td>
- </tr>
-
-<tr> 
-  <td>1</td>
- <td>2017-02-09</td>
- <td>8</td>
- <td>2</td>
- <td>dsfsdf</td>
- </tr>
-
-<tr> 
-  <td>1</td>
- <td>2017-02-09</td>
- <td>8</td>
- <td>2</td>
- <td>sdvsdvsdv</td>
- </tr>
-
-<tr> 
-  <td>1</td>
- <td>2017-02-09</td>
- <td>8</td>
- <td>2</td>
- <td>sdfgsdfgsdfg</td>
- </tr>
-
-</table><table><tr class="table-bordered"><th class="heading">Totaal aantal gewerkte uren: 0 </th></tr></table>
