--- a/staticHEADHTML.html
+++ b/staticHEADHTML.html
@@ -29,7 +29,7 @@
     </tr>
 </table>
 
-<table class="table table-bordered" style="margin-top: -21px;">
+<table class="table table-bordered">
 <tr class="heading">
     <th>Week</th>
     <th>Dag / datum</th>
